corpus/semi-colons.txt
================================================================================
Statement with a semi-colon
================================================================================

local x = 5;

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    declarators: (var_declarators
      (var
        name: (identifier)))
    initializers: (expressions
      (number))))
