corpus/strings.txt
================================================================================
Simple "string"
================================================================================

local x = "hello"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Simple 'string'
================================================================================

local x = 'hello'

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Simple "string" with \"
================================================================================

local x = "he\"llo"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content
        (escape_sequence)))))

================================================================================
Simple 'string' with \'
================================================================================

local x = 'he\'llo'

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content
        (escape_sequence)))))

================================================================================
Simple "string" with format specifier
================================================================================

local x = "a %A"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content
        (format_specifier)))))

================================================================================
Simple "string" with % but not a format specifier
================================================================================

local x = "%"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Long [[string]]
================================================================================

local x = [[hello]]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Long [  [string]  ]
================================================================================

local x = [==[hello]==]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Longer [    [string]    ]
================================================================================

local x = [====[hello]====]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Long string with eq + almost terminating sequence
================================================================================

local x = [==[ ]== ]==]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
"String" with -- in it
================================================================================

local x = "-- stuff"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
'String' with -- in it
================================================================================

local x = '-- stuff'

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
String in return statement
================================================================================

return "hi"

--------------------------------------------------------------------------------

(program
  (return_statement
    (string
      (string_content))))

================================================================================
Unicode escape seq
================================================================================

local x = "a \u{123} b"

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content
        (escape_sequence)))))

================================================================================
% at end of long string
================================================================================

local x = [[ abcd %]]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content))))

================================================================================
Long string with format specifier
================================================================================

local x = [[ abcd %s ]]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string
      (string_content
        (format_specifier)))))

================================================================================
Empty long string
================================================================================

local x = [[]]

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var
      (identifier))
    (string)))
