corpus/variable_assignment.txt
================================================================================
Local Variable Declaration
================================================================================

local x = 5

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    (var
      name: (identifier))
    (number)))

================================================================================
Global Variable Declaration
================================================================================

global x = 5

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    (var
      name: (identifier))
    (number)))

================================================================================
Local Variable List Declaration
================================================================================

local x, y, z = 1, 2, 3

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    (var
      name: (identifier))
    (var
      name: (identifier))
    (var
      name: (identifier))
    (number)
    (number)
    (number)))

================================================================================
Global Variable List Declaration
================================================================================

global x, y, z = 1, 2, "hey"

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    (var
      name: (identifier))
    (var
      name: (identifier))
    (var
      name: (identifier))
    (number)
    (number)
    (string
      content: (string_content))))

================================================================================
Variable reassignment
================================================================================

local x = "hey"
x = "hi"
